--- a/src/components/Issue.css
+++ b/src/components/Issue.css
@@ -2,6 +2,8 @@
   border-bottom: 1px solid #ddd;
   display: flex;
   padding: 0.5rem;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .issue__number {
@@ -25,8 +27,9 @@
 }
 
 .issue__user__avatar {
-  width: 64px;
-  height: 64px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 .issue__user__name {
