--- a/src/components/Issue.css
+++ b/src/components/Issue.css
@@ -1,9 +1,7 @@
 .issue {
   border-bottom: 1px solid #ddd;
   display: flex;
-  padding: 0.5rem;
-  padding-bottom: 1.5rem;
-  margin-bottom: 1rem;
+  padding: 1rem 0.5rem;
 }
 
 .issue__number {
@@ -24,6 +22,7 @@
   justify-content: center;
   align-items: center;
   min-width: 80px;
+  max-width: 80px;
 }
 
 .issue__user__avatar {
@@ -35,12 +34,16 @@
 .issue__user__name {
   color: #555;
   font-size: 0.8rem;
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 .issue__label {
+  display: inline-block;
   font-size: 0.9rem;
   padding: 3px 5px;
   margin-right: 3px;
   border-radius: 5px;
   border: 2px solid #ccc;
+  background-color: #fff;
 }
