--- a/src/containers/IssueDetailPage.css
+++ b/src/containers/IssueDetailPage.css
@@ -61,4 +61,18 @@
 .issue-detail__comment {
   margin-bottom: 1rem;
   border-bottom: 1px solid #ccc;
+  display: flex;
+}
+
+.issue-detail__comment__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+  min-width: 40px;
+  display: block;
+}
+
+.issue-detail__comment__username {
+  font-weight: bold;
 }
