--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 14px;
+  color: #444;
 }
 
 ul {
@@ -12,4 +13,9 @@ ul {
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #444;
 }
