--- a/src/containers/IssueDetailPage.css
+++ b/src/containers/IssueDetailPage.css
@@ -23,6 +23,14 @@
   line-height: 1.4rem;
 }
 
+.issue-detail--loading,
+.issue-detail--error {
+  text-align: center;
+}
+
+.markdown img {
+  max-width: 100%;
+}
 .markdown pre {
   border: 1px solid #ccc;
   padding: 0.5rem;
@@ -54,6 +62,13 @@
   margin-bottom: 2rem;
 }
 
+.issue-detail--no-comments,
+.issue-detail--comments-loading,
+.issue-detail--comments-error {
+  text-align: center;
+  color: #999;
+}
+
 .issue-detail__comments {
   padding: 0 1rem;
 }
@@ -61,7 +76,10 @@
 .issue-detail__comment {
   margin-bottom: 1rem;
   border-bottom: 1px solid #ccc;
-  display: flex;
+}
+
+.issue-detail__comment__body {
+  padding-left: 1rem;
 }
 
 .issue-detail__comment__avatar {
