--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
   font-size: 14px;
   color: #444;
+  font-family: "Open Sans", Helvetica, sans-serif;
 }
 
 ul {
@@ -18,4 +19,12 @@ li {
 a {
   text-decoration: none;
   color: #444;
+}
+
+h1 {
+  font-weight: 300;
+}
+
+h2, h3, h4, h5, h6 {
+  font-weight: 400;
 }
