--- a/src/components/Issue.css
+++ b/src/components/Issue.css
@@ -16,14 +16,22 @@
 
 .issue__label {
   display: inline-block;
-  font-size: 0.9rem;
-  padding: 3px 5px;
+  font-size: 0.75rem;
+  padding: 1px 5px;
   margin-right: 3px;
   border-radius: 5px;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   background-color: #fff;
 }
 
 .issue .issue__user {
   margin-right: 0.5rem;
+}
+
+.issue__summary {
+  padding-left: 0.5rem;
+}
+
+.issue__labels {
+  padding-left: 0.5rem;
 }
