--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@ body {
   font-family: "Open Sans", Helvetica, sans-serif;
 }
 
-ul {
+/*ul {
   margin: 0;
   padding: 0;
 }
 
 li {
   list-style: none;
-}
+}*/
 
 a {
   text-decoration: none;
