--- a/src/containers/IssueDetailPage.css
+++ b/src/containers/IssueDetailPage.css
@@ -1,9 +1,10 @@
 .issue-detail__meta {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 
 .issue-detail__number {
