--- a/src/components/Issue.css
+++ b/src/components/Issue.css
@@ -18,7 +18,7 @@
   display: inline-block;
   font-size: 0.75rem;
   padding: 1px 5px;
-  margin-right: 3px;
+  margin: 0 0.5rem 0.5rem 0;
   border-radius: 5px;
   border: 1px solid #ccc;
   background-color: #fff;
@@ -34,6 +34,11 @@
 
 .issue__labels {
   padding-left: 0.5rem;
+}
+
+.issue__body {
+  word-wrap: break-word;
+  overflow: hidden;
 }
 
 .issue--loading .issue__body {
