--- a/src/containers/IssueListPage.css
+++ b/src/containers/IssueListPage.css
@@ -1,6 +1,11 @@
 .issues__pagination {
-  padding: 1rem;
+  padding-top: 1rem;
   text-align: center;
+}
+
+.issues__pagination > ul {
+  padding: 0;
+  margin: 0;
 }
 
 .issues__pagination li {
@@ -42,7 +47,9 @@
 .issues__pagination .break {
   margin: 0 8px;
 }
-.issues__pagination .previous,
+.issues__pagination .previous {
+  margin-right: 1rem;
+}
 .issues__pagination .next {
-  margin: 0 1rem;
+  margin-left: 1rem;
 }
